fix layout overlapped

--- a/app/public/stylus/_layout/_footer.styl
+++ b/app/public/stylus/_layout/_footer.styl
@@ -12,11 +12,10 @@
 			.footer-link
 				margin-top 17px
 
-
 		.contact-address
 			margin-top 23px
 			line-height 21px
-			height 110px
+			height 130px
 
 		.contact-person
 			line-height 21px
